--- a/main.ipynb
+++ b/main.ipynb
@@ -21,6 +21,7 @@
     "import transformers\n",
     "from scipy.special import softmax\n",
     "import shap\n",
+    "import torch\n",
     "%matplotlib inline"
    ]
   },
@@ -581,6 +582,21 @@
     "plt.legend()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create pipeline for SHAP analysis\n",
+    "device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
+    "model = model.to(device)\n",
+    "\n",
+    "labels = ['Negative', 'Neutral', 'Positive']\n",
+    "\n",
+    "pipe = transformers.TextClassificationPipeline(model=model, tokenizer=tokenizer, return_all_scores=True)"
    ]
   },
   {
@@ -2984,11 +3000,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "6227afb7c57a69e5b7b29699bf6600f7ac6956d0d921ffbdbb2410dc3cd58f71"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('env': venv)",
+   "display_name": "Python 3.9.12 ('pite-drf-react')",
    "language": "python",
    "name": "python3"
   },
@@ -3002,7 +3015,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "bb0ab7eae495734c9fab2ae6111e0ee6c89016f63d2f802bbaf8094c68a1c9fb"
+   }
   }
  },
  "nbformat": 4,
